# 0xmaddie

./: .gitignore  README.md  agents.ipynb  generate_images.ipynb  generative_style.md  readme.md  resonators.ipynb  studio.ipynb  text_to_image.ipynb
gen_image/: gen_image.ipynb  pyproject.toml
gen_image/gen_image/: image.py  random.py
gen_image/gen_image/stable_diffusion/: prompt.py
image/: image.ipynb  pyproject.toml  readme.md
image/image/: __init__.py  stable_diffusion.py
image/image/stable_diffusion/: __init__.py  model.py  prompt.py
junk/: pyproject.toml  readme.md
junk/junk/: __init__.py  abc.py  cairo_template.py  ffmpeg.py  lisp.py  nn.py  nn_2022_11.py  nn_2022_12.py  pil.py  random.py  sdm_2022_11.py  sdm_2022_12.py  sketch_2022_12_18.py  stable_diffusion.py  transformer.py  turtle_graphics.py
lisp/: README.md  pyproject.toml
lisp/lisp/: __init__.py  collection.py  interpreter.py
llama/: README.md  pyproject.toml
llama/llama/: __init__.py
resonators/: README.md  pyproject.toml
resonators/resonators/: __init__.py  decoder.py  optimizer.py
scriptkitty/: pyproject.toml
scriptkitty/scriptkitty/: lisp.py  skew_binary_list.py  stable_diffusion.py
studio/: README.md  pyproject.toml
studio/studio/: lisp.py  resonators.py
sweetp/python/: pyproject.toml
sweetp/python/sweetp/engine/: lisp.py
sweetp/python/sweetp/engine/lisp/: __init__.py  interpreter.py  procedure.py  value.py
sweetp/python/sweetp/model/: gemini.py  llama.py  playground.py
