[project]
name = "gen_image"
version = "0.0.1"
authors = [
  { name="Madison Brooks", email="maddie@0xmaddie.page" },
]
description = "Generative images."
readme = "readme.md"
requires-python = ">=3.7"
dependencies = [
  "numpy",
  "scipy",
  "opensimplex",
  "loguru",
  "sentencepiece",
  "transformers",
  "accelerate",
  "bitsandbytes",
  "ftfy",
  "diffusers @ git+https://github.com/huggingface/diffusers",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
