[project]
name = "lisp"
version = "1.0.0"
authors = [
  { name="Madison Brooks", email="maddie@sweetp.xyz" },
]
description = "It's Lisp, Jim, but not as we know it."
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
  # "pycairo",
  # "numpy",
  # "loguru",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
