[project]
name = "resonators"
version = "1.0.0"
authors = [
  { name="Madison Brooks", email="maddie@sweetp.xyz" },
]
description = "Program evolution with stochastic resonance."
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
  # "pycairo",
  'numpy',
  'scipy',
  # 'jax',
  # "loguru",
  # 'bitsandbytes',
  # 'accelerate',
  # 'transformers',
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
