[project]
name = "scriptkitty"
version = "1.0.0"
authors = [
  { name="Madison Brooks", email="maddie@scriptkitty.xyz" },
]
description = "???"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  'numpy',
  'pycairo',
  # 'flash-attn',
  'bitsandbytes',
  'accelerate',
  'transformers',
  'diffusers',
  # "loguru",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
