[project]
name = "sweetp"
version = "1.0.0"
authors = [
  { name="Madison Brooks", email="maddie@sweetp.xyz" },
]
description = "???"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pycairo",
  'bitsandbytes',
  'accelerate',
  'transformers',
  # "loguru",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
